@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.5
+Release: 0.6
 Group: System Environment/Base
 Source: ftp://jbj.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -498,6 +498,10 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Wed Mar  9 2005 Jeff Johnson <jbj@jbj.org> 4.4.2-0.6
+- permit gpg to be used for RSA/MD5 signatures.
+- permit RSA key sizes larger than 1024 bits.
+
 * Sun Feb 20 2005 Jeff Johnson <jbj@jbj.org> 4.4.2-0.5
 - updated sv.po <goeran@uddrborg.se>.
 
